--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^16.9.17",
     "@types/react-redux": "^7.1.5",
     "@types/styled-jsx": "^2.2.8",
+    "gh-pages": "^2.1.1",
+    "rimraf": "^3.0.0",
     "typescript": "^3.7.4"
   },
   "dependencies": {
